--- a/java/springbootngcd.org
+++ b/java/springbootngcd.org
@@ -1381,3 +1381,20 @@ public  static Date getTimeNow(){
     }
 
 #+END_SRC
+
+** Losing JPA connection after some idle time java.sql.SQLNonTransientConnectionException: Could not read resultset: Connection reset
+
+#+BEGIN_SRC
+spring.datasource.max-active=10
+spring.datasource.max-idle=30
+spring.datasource.max-wait=60
+spring.datasource.test-while-idle=true
+spring.datasource.min-evictable-idle-time-millis=1000
+spring.datasource.time-between-eviction-runs-millis=6000
+spring.datasource.validationQuery=SELECT 1
+spring.datasource.testOnBorrow=true
+spring.datasource.dbcp.test-while-idle=true
+spring.datasource.dbcp.time-between-eviction-runs-millis=6000
+spring.datasource.dbcp.validationQuery=SELECT 1
+spring.datasource.dbcp.testOnBorrow=true
+#+END_SRC
