--- a/java/springbootngcd.org
+++ b/java/springbootngcd.org
@@ -1398,3 +1398,158 @@ spring.datasource.dbcp.time-between-eviction-runs-millis=6000
 spring.datasource.dbcp.validationQuery=SELECT 1
 spring.datasource.dbcp.testOnBorrow=true
 #+END_SRC
+
+
+** Java SFTP upload download from to S3
+
+#+BEGIN_SRC
+import com.amazonaws.services.s3.model.*;
+import com.jvcdp.model.EntityUtils;
+import com.jcraft.jsch.*;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+import com.amazonaws.AmazonServiceException;
+import com.amazonaws.SdkClientException;
+import com.amazonaws.regions.Regions;
+import com.amazonaws.services.s3.AmazonS3;
+import com.amazonaws.services.s3.AmazonS3ClientBuilder;
+import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
+
+import javax.servlet.http.HttpServletResponse;
+import java.io.File;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+
+@RestController()
+@RequestMapping(value = "/home")
+public class DashboardController {
+
+    private static final Logger logger = LoggerFactory.getLogger(DashboardController.class);
+
+
+    @GetMapping(value = "")
+    public ResponseEntity<StreamingResponseBody> fetch(@RequestParam(name="bucketName", required = true) String bucketName,
+            @RequestParam(name="fileObjKeyName", required = true) String fileObjKeyName
+            ){
+        ResponseEntity<String> responseEntity = null;
+        LocalDateTime localDateTime = LocalDateTime.now();
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+        String formatDateTime = localDateTime.format(formatter);
+        Regions clientRegion = Regions.AP_SOUTHEAST_1;
+        //File is downloaded now lets place it to s3
+        AmazonS3 s3Client = AmazonS3ClientBuilder.standard()
+                .withRegion(clientRegion)
+                .build();
+        String outputFileNameNormalized = fileObjKeyName.replace('/','-').replace('\\','-');
+        String responseHeaderContentDisp = String.format("attachment; filename=\"%s\"",outputFileNameNormalized );
+        // Upload a file as a new object with ContentType and title specified.
+        GetObjectRequest request = new GetObjectRequest(bucketName, fileObjKeyName);
+        ObjectMetadata metadata = new ObjectMetadata();
+        final S3Object obj = s3Client.getObject(request);
+        final S3ObjectInputStream inputStream = obj.getObjectContent();
+        StreamingResponseBody responseBody = outputStream -> {
+            int numberOfBytesToWrite;
+            byte[] data = new byte[1024];
+            while ((numberOfBytesToWrite = inputStream.read(data, 0, data.length)) != -1) {
+                System.out.println("Writing some bytes..");
+                outputStream.write(data, 0, numberOfBytesToWrite);
+            }
+            inputStream.close();
+        };
+        return ResponseEntity.ok()
+                .header(HttpHeaders.CONTENT_DISPOSITION, responseHeaderContentDisp)
+                .contentType(MediaType.APPLICATION_OCTET_STREAM)
+                .body(responseBody);
+    }
+
+    @PostMapping(value = "")
+    public ResponseEntity<String> download(
+            @RequestParam(name="remoteHost", required = true) String remoteHost,
+            @RequestParam(name="username", required = true) String username,
+            @RequestParam(name="password", required = true) String password,
+            @RequestParam(name="remoteFile", required = true) String remoteFile,
+            @RequestParam(name="bucketName", required = true) String bucketName,
+            @RequestParam(name="fileObjKeyName", required = true) String fileObjKeyName,
+            @RequestParam(name="remotePort", required = false) Integer remotePort){
+        ResponseEntity<String> responseEntity = null;
+        Regions clientRegion = Regions.AP_SOUTHEAST_1;
+        LocalDateTime localDateTime = LocalDateTime.now();
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+        String formatDateTime = localDateTime.format(formatter);
+
+
+
+        //added for sftp functionality
+        try {
+            boolean localCacheDir = new File("tmp/data/s3/download").mkdirs();
+            String localFilePath = new File("tmp/data/s3/download", remoteFile).getAbsolutePath();
+            logger.debug("Saving file to: "+localFilePath);
+            JSch jsch = new JSch();
+            remotePort=(remotePort==null || remotePort.toString().isEmpty())?22:remotePort;
+            Session jschSession = jsch.getSession(username, remoteHost,remotePort);
+            java.util.Properties config = new java.util.Properties();
+            config.put("StrictHostKeyChecking", "no");
+            jschSession.setConfig(config);
+
+            jschSession.setPassword(password);
+            jschSession.connect();
+
+            ChannelSftp channelSftp = (ChannelSftp) jschSession.openChannel("sftp");
+            channelSftp.connect();
+
+            channelSftp.get(remoteFile, localFilePath);
+            channelSftp.exit();
+
+
+            //File is downloaded now lets place it to s3
+            AmazonS3 s3Client = AmazonS3ClientBuilder.standard()
+                    .withRegion(clientRegion)
+                    .build();
+            // Upload a file as a new object with ContentType and title specified.
+            PutObjectRequest request = new PutObjectRequest(bucketName, fileObjKeyName, new File(localFilePath));
+            ObjectMetadata metadata = new ObjectMetadata();
+            metadata.setContentType(MediaType.APPLICATION_OCTET_STREAM.toString());
+            metadata.addUserMetadata("title", "jvcdpGwDownloadedObject");
+            request.setMetadata(metadata);
+            s3Client.putObject(request);
+            responseEntity=   ResponseEntity.status(HttpStatus.OK).body("file was downloaded successfully!");
+        }
+        catch (JSchException e) {
+            logger.error(EntityUtils.getStrackTraceAsString(e));
+            e.printStackTrace();
+            responseEntity=  ResponseEntity.status(HttpStatus.EXPECTATION_FAILED).body("There was an error executing your request!" + EntityUtils.getStrackTraceAsString(e));
+        } catch (SftpException e) {
+            logger.error(EntityUtils.getStrackTraceAsString(e));
+            e.printStackTrace();
+            responseEntity=   ResponseEntity.status(HttpStatus.EXPECTATION_FAILED).body("There was an error executing your request!" + EntityUtils.getStrackTraceAsString(e));
+        } catch (AmazonServiceException e) {
+            // The call was transmitted successfully, but Amazon S3 couldn't process
+            // it, so it responseEntity= ed an error response.
+            logger.error(EntityUtils.getStrackTraceAsString(e));
+            e.printStackTrace();
+            responseEntity=   ResponseEntity.status(HttpStatus.EXPECTATION_FAILED).body("There was an error executing your request!" + EntityUtils.getStrackTraceAsString(e));
+        } catch (SdkClientException e) {
+            // Amazon S3 couldn't be contacted for a response, or the client
+            // couldn't parse the response from Amazon S3.
+            logger.error(EntityUtils.getStrackTraceAsString(e));
+            e.printStackTrace();
+            responseEntity=   ResponseEntity.status(HttpStatus.EXPECTATION_FAILED).body("There was an error executing your request!" + EntityUtils.getStrackTraceAsString(e));
+        }catch (Exception e) {
+            //Catch any other type of exception and log it as well
+            logger.error(EntityUtils.getStrackTraceAsString(e));
+            e.printStackTrace();
+            responseEntity=   ResponseEntity.status(HttpStatus.EXPECTATION_FAILED).body("There was an error executing your request!" + EntityUtils.getStrackTraceAsString(e));
+        }finally {
+            boolean deleteCache = EntityUtils.deleteDirectory(new File("tmp/data"));
+        }
+
+        return  responseEntity;
+    }
+}
+
+#+END_SRC
