--- a/datascience/pyspark-cca175.org
+++ b/datascience/pyspark-cca175.org
@@ -9,6 +9,7 @@
 - To connect to remote database using jdbc
 - It works only from spark 1.3.0 or later
 * Either you need to run pyspark with driver-class-path or set environment variable with os.environ
+#+BEGIN_SRC
 pyspark --driver-class-path /usr/share/java/mysql-connector-java.jar
 os.environ['SPARK_CLASSPATH'] = "/usr/share/java/mysql-connector-java.jar"
 
@@ -22,11 +23,13 @@ for rec in df.collect():
   print(rec)
 
 df.count()
-
+#+END_SRC
 * #############################################################################
 
 * Developing simple scala based applications for spark
 * Save this to a file with py extension
+#+BEGIN_SRC
+
 from pyspark import SparkContext, SparkConf
 conf = SparkConf().setAppName("pyspark")
 sc = SparkContext(conf=conf)
@@ -34,6 +37,7 @@ dataRDD = sc.textFile("/user/cloudera/sqoop_import/departments")
 for line in dataRDD.collect():
     print(line)
 dataRDD.saveAsTextFile("/user/cloudera/pyspark/departmentsTesting")
+#+END_SRC
 
 * Run using this command
 * master local will run in spark native mode
@@ -45,6 +49,8 @@ spark-submit --master yarn saveFile.py
 * #############################################################################
 
 *  Load data from HDFS and storing results back to HDFS using Spark
+#+BEGIN_SRC
+
 from pyspark import SparkContext
 
 dataRDD = sc.textFile("/user/cloudera/sqoop_import/departments")
@@ -54,19 +60,22 @@ for line in dataRDD.collect():
 print(dataRDD.count())
 
 dataRDD.saveAsTextFile("/user/cloudera/pyspark/departments")
-
+#+END_SRC
 * Object files are not available in python
 dataRDD.saveAsObjectFile("/user/cloudera/pyspark/departmentsObject")
 
 * saveAsSequenceFile
+#+BEGIN_SRC
+
 dataRDD.map(lambda x: (None, x)).saveAsSequenceFile("/user/cloudera/pyspark/departmentsSeq")
 dataRDD.map(lambda x: tuple(x.split(",", 1))).saveAsSequenceFile("/user/cloudera/pyspark/departmentsSeq")
 dataRDD.map(lambda x: tuple(x.split(",", 1))).saveAsSequenceFile("/user/cloudera/pyspark/orders")
 path="/user/cloudera/pyspark/departmentsSeq"
 
 dataRDD.map(lambda x: tuple(x.split(",", 1))).saveAsNewAPIHadoopFile(path,"org.apache.hadoop.mapreduce.lib.output.SequenceFileOutputFormat",keyClass="org.apache.hadoop.io.Text",valueClass="org.apache.hadoop.io.Text")
-
+#+END_SRC
 * reading sequence file
+#+BEGIN_SRC
 data = sc.sequenceFile("/user/cloudera/pyspark/departmentsSeq")
 data = sc.sequenceFile("/user/cloudera/pyspark/orders")
 data = sc.sequenceFile("/user/cloudera/pyspark/departmentsSeq", "org.apache.hadoop.io.IntWritable", "org.apache.hadoop.io.Text")
@@ -83,11 +92,13 @@ sqlContext.sql("create table departmentsSpark as select * from departments")
 depts = sqlContext.sql("select * from departmentsSpark")
 for rec in depts.collect():
   print(rec)
-
+#+END_SRC
 * We can run hive INSERT, LOAD and any valid hive query in Hive context
 
 - Make sure you copy departments.json to HDFS
 - create departments.json on Linux file system
+#+BEGIN_SRC
+
 {"department_id":2, "department_name":"Fitness"}
 {"department_id":3, "department_name":"Footwear"}
 {"department_id":4, "department_name":"Apparel"}
@@ -96,8 +107,11 @@ for rec in depts.collect():
 {"department_id":7, "department_name":"Fan Shop"}
 {"department_id":8, "department_name":"TESTING"}
 {"department_id":8000, "department_name":"TESTING"}
+#+END_SRC
 
 * copying to HDFS (using linux command line)
+#+BEGIN_SRC
+
 hadoop fs -put departments.json /user/cloudera/pyspark
 
 from pyspark import SQLContext
@@ -107,6 +121,7 @@ departmentsJson.registerTempTable("departmentsTable")
 departmentsData = sqlContext.sql("select * from departmentsTable")
 for rec in departmentsData.collect():
   print(rec)
+#+END_SRC
 
 * Writing data in json format
 departmentsData.toJSON().saveAsTextFile("/user/cloudera/pyspark/departmentsJson")
@@ -118,6 +133,7 @@ hadoop fs -cat /user/cloudera/pyspark/departmentsJson/part*
 *  Developing word count program
 -  Create a file and type few lines and save it as wordcount.txt and copy to HDFS
 -  to /user/cloudera/wordcount.txt
+#+BEGIN_SRC
 
 data = sc.textFile("/user/cloudera/wordcount.txt")
 dataFlatMap = data.flatMap(lambda x: x.split(" "))
@@ -128,11 +144,13 @@ dataReduceByKey.saveAsTextFile("/user/cloudera/wordcountoutput")
 
 for i in dataReduceByKey.collect():
   print(i)
-
+#+END_SRC
 * #############################################################################
 
 *  Join disparate datasets together using Spark
 **  Problem statement, get the revenue and number of orders from order_items on daily basis
+#+BEGIN_SRC
+
 ordersRDD = sc.textFile("/user/cloudera/sqoop_import/orders")
 orderItemsRDD = sc.textFile("/user/cloudera/sqoop_import/order_items")
 
@@ -141,26 +159,34 @@ orderItemsParsedRDD = orderItemsRDD.map(lambda rec: (int(rec.split(",")[1]), rec
 
 ordersJoinOrderItems = orderItemsParsedRDD.join(ordersParsedRDD)
 revenuePerOrderPerDay = ordersJoinOrderItems.map(lambda t: (t[1][1].split(",")[1], float(t[1][0].split(",")[4])))
-
+#+END_SRC
 **  Get order count per day
+#+BEGIN_SRC
+
 ordersPerDay = ordersJoinOrderItems.map(lambda rec: rec[1][1].split(",")[1] + "," + str(rec[0])).distinct()
 ordersPerDayParsedRDD = ordersPerDay.map(lambda rec: (rec.split(",")[0], 1))
 totalOrdersPerDay = ordersPerDayParsedRDD.reduceByKey(lambda x, y: x + y)
-
+#+END_SRC
 **  Get revenue per day from joined data
+#+BEGIN_SRC
+
 totalRevenuePerDay = revenuePerOrderPerDay.reduceByKey( \
 lambda total1, total2: total1 + total2 \
 )
 
 for data in totalRevenuePerDay.collect():
   print(data)
-
+#+END_SRC
 **  Joining order count per day and revenue per day
+#+BEGIN_SRC
+
 finalJoinRDD = totalOrdersPerDay.join(totalRevenuePerDay)
 for data in finalJoinRDD.take(5):
   print(data)
-
+#+END_SRC
 *  Using Hive
+#+BEGIN_SRC
+
 from pyspark.sql import HiveContext
 sqlContext = HiveContext(sc)
 sqlContext.sql("set spark.sql.shuffle.partitions=10");
@@ -172,8 +198,10 @@ group by o.order_date order by o.order_date")
 
 for data in joinAggData.collect():
   print(data)
-
+#+END_SRC
 *  Using spark native sql
+#+BEGIN_SRC
+
 from pyspark.sql import SQLContext, Row
 sqlContext = SQLContext(sc)
 sqlContext.sql("set spark.sql.shuffle.partitions=10");
@@ -200,11 +228,13 @@ group by o.order_date order by o.order_date")
 
 for data in joinAggData.collect():
   print(data)
-
+#+END_SRC
 * #############################################################################
 
 *  Calculate aggregate statistics (e.g., average or sum) using Spark
 ** sum
+#+BEGIN_SRC
+
 ordersRDD = sc.textFile("/user/cloudera/sqoop_import/orders")
 ordersRDD.count()
 
@@ -214,7 +244,7 @@ for i in orderItemsMap.take(5):
   print i
 
 orderItemsReduce = orderItemsMap.reduce(lambda rev1, rev2: rev1 + rev2)
-
+#+END_SRC
 * Get max priced product from products table
 ** There is one record which is messing up default , delimiters
 ** Clean it up (we will see how we can filter with out deleting the record later)
@@ -223,19 +253,26 @@ hadoop fs -get /user/cloudera/sqoop_import/products
 hadoop fs -put -f products/part* /user/cloudera/sqoop_import/products
 
 * pyspark script to get the max priced product
+#+BEGIN_SRC
+
 productsRDD = sc.textFile("/user/cloudera/sqoop_import/products")
 productsMap = productsRDD.map(lambda rec: rec)
 productsMap.reduce(lambda rec1, rec2: (rec1 if((rec1.split(",")[4] != "" and rec2.split(",")[4] != "") and float(rec1.split(",")[4]) >= float(rec2.split(",")[4])) else rec2))
-
+#+END_SRC
 * avg
 revenue = sc.textFile("/user/cloudera/sqoop_import/order_items").map(lambda rec: float(rec.split(",")[4])).reduce(lambda rev1, rev2: rev1 + rev2)
 totalOrders = sc.textFile("/user/cloudera/sqoop_import/order_items").map(lambda rec: int(rec.split(",")[1])).distinct().count()
-
+#+END_SRC
 * Number of orders by status
+#+BEGIN_SRC
+
 ordersRDD = sc.textFile("/user/cloudera/sqoop_import/orders")
 ordersMap = ordersRDD.map(lambda rec:  (rec.split(",")[3], 1))
 for i in ordersMap.countByKey().items(): print(i)
+#+END_SRC
 * groupByKey is not very efficient
+#+BEGIN_SRC
+
 ordersByStatus = ordersMap.groupByKey().map(lambda t: (t[0], sum(t[1])))
 ordersByStatus = ordersMap.reduceByKey(lambda acc, value: acc + value)
 ordersMap = ordersRDD.map(lambda rec:  (rec.split(",")[3], rec))
@@ -244,17 +281,22 @@ ordersByStatus = ordersMap.combineByKey(lambda value: 1, lambda acc, value: acc+
 
 for recs in ordersByStatus.collect():
   print(recs)
-
+#+END_SRC
 * Number of orders by order date and order status
 * Key orderDate and orderStatus
+#+BEGIN_SRC
+
 ordersRDD = sc.textFile("/user/cloudera/sqoop_import/orders")
 ordersMapRDD = ordersRDD.map(lambda rec: ((rec.split(",")[1], rec.split(",")[3]), 1))
 ordersByStatusPerDay = ordersMapRDD.reduceByKey(lambda v1, v2: v1+v2)
 
 for i in ordersByStatusPerDay.collect():
   print(i)
+#+END_SRC
 
 * Total Revenue per day
+#+BEGIN_SRC
+
 ordersRDD = sc.textFile("/user/cloudera/sqoop_import/orders")
 orderItemsRDD = sc.textFile("/user/cloudera/sqoop_import/order_items")
 
@@ -266,7 +308,7 @@ ordersJoinOrderItemsMap = ordersJoinOrderItems.map(lambda t: (t[1][1].split(",")
 
 revenuePerDay = ordersJoinOrderItemsMap.reduceByKey(lambda acc, value: acc + value)
 for i in revenuePerDay.collect(): print(i)
-
+#+END_SRC
 * average
 - average revenue per day
 - Parse Orders (key order_id)
@@ -277,6 +319,7 @@ for i in revenuePerDay.collect(): print(i)
 - Parse data to discard order_id and get order_date as key and sum(order_item_subtotal) per order as value
 - Use appropriate aggregate function to get sum(order_item_subtotal) per day and count(distinct order_id) per day
 - Parse data and apply average logic
+#+BEGIN_SRC
 
 ordersRDD = sc.textFile("/user/cloudera/sqoop_import/orders")
 orderItemsRDD = sc.textFile("/user/cloudera/sqoop_import/order_items")
@@ -306,8 +349,10 @@ for data in revenuePerDay.collect():
   print(data)
 
 avgRevenuePerDay = revenuePerDay.map(lambda x: (x[0], x[1][0]/x[1][1]))
-
+#+END_SRC
 * Customer id with max revenue
+#+BEGIN_SRC
+
 ordersRDD = sc.textFile("/user/cloudera/sqoop_import/orders")
 orderItemsRDD = sc.textFile("/user/cloudera/sqoop_import/order_items")
 
@@ -320,8 +365,10 @@ revenuePerDayPerCustomer = ordersPerDayPerCustomer.reduceByKey(lambda x, y: x + 
 
 revenuePerDayPerCustomerMap = revenuePerDayPerCustomer.map(lambda rec: (rec[0][0], (rec[0][1], rec[1])))
 topCustomerPerDaybyRevenue = revenuePerDayPerCustomerMap.reduceByKey(lambda x, y: (x if x[1] >= y[1] else y))
-
+#+END_SRC
 * Using regular function
+#+BEGIN_SRC
+
 def findMax(x, y):
   if(x[1] >= y[1]):
     return x
@@ -329,8 +376,10 @@ def findMax(x, y):
     return y
 
 topCustomerPerDaybyRevenue = revenuePerDayPerCustomerMap.reduceByKey(lambda x, y: findMax(x, y))
-
+#+END_SRC
 *  Using Hive Context
+#+BEGIN_SRC
+
 from pyspark.sql import HiveContext
 hiveContext = HiveContext(sc)
 hiveContext.sql("set spark.sql.shuffle.partitions=10");
@@ -350,8 +399,10 @@ group by o.order_date, o.order_customer_id) q \
 group by q.order_date) q2 \
 on q1.order_date = q2.order_date and q1.order_item_subtotal = q2.order_item_subtotal \
 order by q1.order_date")
-
+#+END_SRC
 *  This query works in hive
+#+BEGIN_SRC
+
 select * from (select q.order_date, q.order_customer_id, q.order_item_subtotal, 
 max(q.order_item_subtotal) over (partition by q.order_date) max_order_item_subtotal 
 from (select o.order_date, o.order_customer_id, sum(oi.order_item_subtotal) order_item_subtotal 
@@ -375,10 +426,12 @@ group by o.order_date, o.order_customer_id) q
 group by q.order_date) q2
 on q1.order_date = q2.order_date and q1.order_item_subtotal = q2.order_item_subtotal
 order by q1.order_date;
-
+#+END_SRC
 * #########################################################################################
 
 *  Filter data into a smaller dataset using Spark
+#+BEGIN_SRC
+
 ordersRDD = sc.textFile("/user/cloudera/sqoop_import/orders")
 for i in ordersRDD.filter(lambda line: line.split(",")[3] == "COMPLETE").take(5): print(i)
 
@@ -391,12 +444,13 @@ for i in ordersRDD.filter(lambda line: int(line.split(",")[0]) > 100 or line.spl
 for i in ordersRDD.filter(lambda line: int(line.split(",")[0]) > 1000 and ("PENDING" in line.split(",")[3] or line.split(",")[3] == ("CANCELLED"))).take(5): print(i)
  
 for i in ordersRDD.filter(lambda line: int(line.split(",")[0]) > 1000 and line.split(",")[3] != ("COMPLETE")).take(5): print(i)
-
+#+END_SRC
 * Check if there are any cancelled orders with amount greater than 1000$
 ** Get only cancelled orders
 ** Join orders and order items
 ** Generate sum(order_item_subtotal) per order
 ** Filter data which amount to greater than 1000$
+#+BEGIN_SRC
 
 ordersRDD = sc.textFile("/user/cloudera/sqoop_import/orders")
 orderItemsRDD = sc.textFile("/user/cloudera/sqoop_import/order_items")
@@ -408,12 +462,14 @@ orderItemsAgg = orderItemsParsedRDD.reduceByKey(lambda acc, value: (acc + value)
 ordersJoinOrderItems = orderItemsAgg.join(ordersParsedRDD)
 
 for i in ordersJoinOrderItems.filter(lambda rec: rec[1][0] >= 1000).take(5): print(i)
-
+#+END_SRC
 * #########################################################
 
 *  Write a query that produces ranked or sorted data using Spark
 
 ** Global sorting and ranking
+#+BEGIN_SRC
+
 orders = sc.textFile("/user/cloudera/sqoop_import/orders")
 for i in orders.map(lambda rec: (int(rec.split(",")[0]), rec)).sortByKey().collect(): print(i)
 for i in orders.map(lambda rec: (int(rec.split(",")[0]), rec)).sortByKey(False).take(5): print(i)
@@ -423,8 +479,10 @@ for i in orders.map(lambda rec: (int(rec.split(",")[0]), rec)).takeOrdered(5, la
 for i in orders.takeOrdered(5, lambda x: int(x.split(",")[0])): print(i)
 for i in orders.takeOrdered(5, lambda x: -int(x.split(",")[0])): print(i)
 
-
+#+END_SRC
 * By key sorting and ranking
+#+BEGIN_SRC
+
 def getAllSortByPrice(rec, bool):
   if(bool == False):
     x = sorted(rec[1], key = lambda k: -float(k.split(",")[4]))
@@ -461,14 +519,18 @@ products = sc.textFile("/user/cloudera/sqoop_import/products")
 productsMap = products.map(lambda rec: (rec.split(",")[1], rec))
 productsGroupBy = productsMap.groupByKey()
 for i in productsGroupBy.collect(): print(i)
-
+#+END_SRC
 * Get data sorted by product price per category
 ** You can use map or flatMap, if you want to see one record per line you need to use flatMap
 ** Map will return the list
+#+BEGIN_SRC
+
 for i in productsGroupBy.map(lambda rec: sorted(rec[1], key=lambda k: float(k.split(",")[4]))).take(100): print(i)
 for i in productsGroupBy.map(lambda rec: sorted(rec[1], key=lambda k: float(k.split(",")[4]), reverse=True)).take(100): print(i)
-
+#+END_SRC
 * To get topN products by price in each category
+#+BEGIN_SRC
+
 def getTopN(rec, topN):
   x = [ ]
   x = list(sorted(rec[1], key=lambda k: float(k.split(",")[4]), reverse=True))
@@ -476,8 +538,10 @@ def getTopN(rec, topN):
   return (y for y in list(itertools.islice(x, 0, topN)))
 
 for i in productsMap.groupByKey().flatMap(lambda x: getTopN(x, 2)).collect(): print(i)
-
+#+END_SRC
 * To get topN priced products by category
+#+BEGIN_SRC
+
 def getTopDenseN(rec, topN):
   x = [ ]
   topNPrices = [ ]
@@ -501,22 +565,30 @@ for i in productsMap.groupByKey().flatMap(lambda x: getFirstTwo(x)).collect(): p
 for i in productsMap.groupByKey().flatMap(lambda x: getAllSortByPrice(x, True)).collect(): print(i)
 for i in productsMap.groupByKey().flatMap(getAll).collect(): print(i)
 for i in productsMap.groupByKey().flatMap(getTop).collect(): print(i)
-
+#+END_SRC
 * Sorting using queries
 ** Global sorting and ranking
+#+BEGIN_SRC
 select * from products order by product_price desc;
 select * from products order by product_price desc limit 10;
-
+#+END_SRC
 * By key sorting
 ** Using order by is not efficient, it serializes
+#+BEGIN_SRC
+
 select * from products order by product_category_id, product_price desc;
-
+#+END_SRC
 * Using distribute by sort by (to distribute sorting and scale it up)
-select * from products distribute by product_category_id sort by product_price desc;
+#+BEGIN_SRC
 
+select * from products distribute by product_category_id sort by product_price desc;
+#+END_SRC
 * By key ranking (in Hive we can use windowing/analytic functions)
+#+BEGIN_SRC
+
 select * from (select p.*, 
 dense_rank() over (partition by product_category_id order by product_price desc) dr
 from products p
 distribute by product_category_id) q
 where dr <= 2 order by product_category_id, dr;
+#+END_SRC
