--- a/datascience/pyspark-cca175.org
+++ b/datascience/pyspark-cca175.org
@@ -1,6 +1,7 @@
 * Introduction
 - spark-shell
-- pyspark
+- pyspark 
+  - --master spark://spark-master:7077
 - SparkContext
 - SQLContext
 - HiveContext
@@ -74,7 +75,7 @@
 
 * Either you need to run pyspark with driver-class-path or set environment variable with os.environ
 #+BEGIN_SRC
-pyspark --driver-class-path /usr/share/java/mysql-connector-java.jar
+spark/bin/pyspark --master spark://spark-master:7077 --driver-class-path /usr/share/java/mysql-connector-java.jar
 os.environ['SPARK_CLASSPATH'] = "/usr/share/java/mysql-connector-java.jar"
 
 from pyspark.sql import SQLContext
