--- a/datascience/pyspark-cca175.org
+++ b/datascience/pyspark-cca175.org
@@ -453,6 +453,26 @@ def findMax(x, y):
 topCustomerPerDaybyRevenue = revenuePerDayPerCustomerMap.reduceByKey(lambda x, y: findMax(x, y))
 #+END_SRC
 *  Using Hive Context
+spark-sql  or hive
+
+for local file
+#+BEGIN_SRC
+create database retail_db;
+create table retail_db.orders(order_id int, order_date string, order_customer_id int, order_status string) row format delimited fields terminated by ',' stored as textfile;
+load data local inpath '/data/retail_db/t0/orders' into table orders;
+#+END_SRC
+
+** for hdfs
+
+#+BEGIN_SRC
+create database retail_db;
+use retail_db;
+create external table orders(order_id int, order_date string, order_customer_id int, order_status string) row format delimited fields terminated by ',' location '/data/retail_db/t0/orders';
+create table order_items (order_item_id int, order_item_order_id int, order_item_product_id int, order_item_quantity int, order_item_subtotal float, order_item_product_price float) row format delimited fields terminated by ',' location '/data/retail_db/t0/order_items';
+select * from retail_db.orders limit 5;
+select * from retailo_db.order_items limit 5;
+#+END_SRC
+
 #+BEGIN_SRC
 
 from pyspark.sql import HiveContext
@@ -666,4 +686,201 @@ dense_rank() over (partition by product_category_id order by product_price desc)
 from products p
 distribute by product_category_id) q
 where dr <= 2 order by product_category_id, dr;
+#+END_SRC
+
+
+* schema for the test retail_db database
+
+#+BEGIN_SRC
+
+--
+-- Table structure for table `categories`
+--
+
+DROP TABLE IF EXISTS `categories`;
+/*!40101 SET @saved_cs_client     = @@character_set_client */;
+/*!40101 SET character_set_client = utf8 */;
+CREATE TABLE `categories` (
+  `category_id` int(11) NOT NULL AUTO_INCREMENT,
+  `category_department_id` int(11) NOT NULL,
+  `category_name` varchar(45) NOT NULL,
+  PRIMARY KEY (`category_id`)
+) ENGINE=InnoDB AUTO_INCREMENT=59 DEFAULT CHARSET=utf8;
+/*!40101 SET character_set_client = @saved_cs_client */;
+
+
+--
+-- Table structure for table `customers`
+--
+
+DROP TABLE IF EXISTS `customers`;
+/*!40101 SET @saved_cs_client     = @@character_set_client */;
+/*!40101 SET character_set_client = utf8 */;
+CREATE TABLE `customers` (
+  `customer_id` int(11) NOT NULL AUTO_INCREMENT,
+  `customer_fname` varchar(45) NOT NULL,
+  `customer_lname` varchar(45) NOT NULL,
+  `customer_email` varchar(45) NOT NULL,
+  `customer_password` varchar(45) NOT NULL,
+  `customer_street` varchar(255) NOT NULL,
+  `customer_city` varchar(45) NOT NULL,
+  `customer_state` varchar(45) NOT NULL,
+  `customer_zipcode` varchar(45) NOT NULL,
+  PRIMARY KEY (`customer_id`)
+) ENGINE=InnoDB AUTO_INCREMENT=12436 DEFAULT CHARSET=utf8;
+/*!40101 SET character_set_client = @saved_cs_client */;
+
+--
+-- Table structure for table `departments`
+--
+
+DROP TABLE IF EXISTS `departments`;
+/*!40101 SET @saved_cs_client     = @@character_set_client */;
+/*!40101 SET character_set_client = utf8 */;
+CREATE TABLE `departments` (
+  `department_id` int(11) NOT NULL AUTO_INCREMENT,
+  `department_name` varchar(45) NOT NULL,
+  PRIMARY KEY (`department_id`)
+) ENGINE=InnoDB AUTO_INCREMENT=8 DEFAULT CHARSET=utf8;
+/*!40101 SET character_set_client = @saved_cs_client */;
+
+--
+-- Dumping data for table `departments`
+--
+
+LOCK TABLES `departments` WRITE;
+/*!40000 ALTER TABLE `departments` DISABLE KEYS */;
+INSERT INTO `departments` VALUES (2,'Fitness'),(3,'Footwear'),(4,'Apparel'),(5,'Golf'),(6,'Outdoors'),(7,'Fan Shop');
+/*!40000 ALTER TABLE `departments` ENABLE KEYS */;
+UNLOCK TABLES;
+
+--
+-- Table structure for table `order_items`
+--
+
+DROP TABLE IF EXISTS `order_items`;
+CREATE TABLE `order_items` (
+  `order_item_id` int(11) NOT NULL AUTO_INCREMENT,
+  `order_item_order_id` int(11) NOT NULL,
+  `order_item_product_id` int(11) NOT NULL,
+  `order_item_quantity` tinyint(4) NOT NULL,
+  `order_item_subtotal` float NOT NULL,
+  `order_item_product_price` float NOT NULL,
+  PRIMARY KEY (`order_item_id`)
+) ENGINE=InnoDB AUTO_INCREMENT=172199 DEFAULT CHARSET=utf8;
+/*!40101 SET character_set_client = @saved_cs_client */;
+
+--
+-- Table structure for table `orders`
+--
+
+DROP TABLE IF EXISTS `orders`;
+/*!40101 SET @saved_cs_client     = @@character_set_client */;
+/*!40101 SET character_set_client = utf8 */;
+CREATE TABLE `orders` (
+  `order_id` int(11) NOT NULL AUTO_INCREMENT,
+  `order_date` datetime NOT NULL,
+  `order_customer_id` int(11) NOT NULL,
+  `order_status` varchar(45) NOT NULL,
+  PRIMARY KEY (`order_id`)
+) ENGINE=InnoDB AUTO_INCREMENT=68884 DEFAULT CHARSET=utf8;
+/*!40101 SET character_set_client = @saved_cs_client */;
+
+--
+-- Table structure for table `products`
+--
+
+DROP TABLE IF EXISTS `products`;
+/*!40101 SET @saved_cs_client     = @@character_set_client */;
+/*!40101 SET character_set_client = utf8 */;
+CREATE TABLE `products` (
+  `product_id` int(11) NOT NULL AUTO_INCREMENT,
+  `product_category_id` int(11) NOT NULL,
+  `product_name` varchar(45) NOT NULL,
+  `product_description` varchar(255) NOT NULL,
+  `product_price` float NOT NULL,
+  `product_image` varchar(255) NOT NULL,
+  PRIMARY KEY (`product_id`)
+) ENGINE=InnoDB AUTO_INCREMENT=1346 DEFAULT CHARSET=utf8;
+/*!40101 SET character_set_client = @saved_cs_client */;
+
+#+END_SRC
+
+*** postgresql 
+#+BEGIN_SRC
+
+CREATE TABLE departments (
+  department_id INT NOT NULL,
+  department_name VARCHAR(45) NOT NULL,
+  PRIMARY KEY (department_id)
+);
+
+--
+-- Table structure for table categories
+--
+
+CREATE TABLE categories (
+  category_id INT NOT NULL,
+  category_department_id INT NOT NULL,
+  category_name VARCHAR(45) NOT NULL,
+  PRIMARY KEY (category_id)
+); 
+
+--
+-- Table structure for table products
+--
+
+CREATE TABLE products (
+  product_id INT NOT NULL,
+  product_category_id INT NOT NULL,
+  product_name VARCHAR(45) NOT NULL,
+  product_description VARCHAR(255) NOT NULL,
+  product_price FLOAT NOT NULL,
+  product_image VARCHAR(255) NOT NULL,
+  PRIMARY KEY (product_id)
+);
+
+--
+-- Table structure for table customers
+--
+
+CREATE TABLE customers (
+  customer_id INT NOT NULL,
+  customer_fname VARCHAR(45) NOT NULL,
+  customer_lname VARCHAR(45) NOT NULL,
+  customer_email VARCHAR(45) NOT NULL,
+  customer_password VARCHAR(45) NOT NULL,
+  customer_street VARCHAR(255) NOT NULL,
+  customer_city VARCHAR(45) NOT NULL,
+  customer_state VARCHAR(45) NOT NULL,
+  customer_zipcode VARCHAR(45) NOT NULL,
+  PRIMARY KEY (customer_id)
+); 
+
+--
+-- Table structure for table orders
+--
+
+CREATE TABLE orders (
+  order_id INT NOT NULL,
+  order_date TIMESTAMP NOT NULL,
+  order_customer_id INT NOT NULL,
+  order_status VARCHAR(45) NOT NULL,
+  PRIMARY KEY (order_id)
+);
+
+--
+-- Table structure for table order_items
+--
+
+CREATE TABLE order_items (
+  order_item_id INT NOT NULL,
+  order_item_order_id INT NOT NULL,
+  order_item_product_id INT NOT NULL,
+  order_item_quantity INT NOT NULL,
+  order_item_subtotal FLOAT NOT NULL,
+  order_item_product_price FLOAT NOT NULL,
+  PRIMARY KEY (order_item_id)
+);
+
 #+END_SRC
